--- a/IDP with BAML 0.ipynb
+++ b/IDP with BAML 0.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "640eff2c-f021-4d4d-af60-99d15bf1d506",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "208d4062-8c0b-429b-aa78-12222d3a71f7",
    "metadata": {},
    "outputs": [],
@@ -50,37 +50,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9acd3632-3ad5-4f09-9a29-e52b85e00add",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'BamlSyncClient' object has no attribute 'ExtractAppointmentFromImage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://baml-testing-idp-image-to-json.s3.us-east-1.amazonaws.com/appointment.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m appointment \u001b[38;5;241m=\u001b[39m \u001b[43mextract_appointment_from_url\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(appointment))\n\u001b[0;32m      4\u001b[0m appointment\n",
-      "Cell \u001b[1;32mIn[4], line 15\u001b[0m, in \u001b[0;36mextract_appointment_from_url\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03mExtracts an image of a receipt stored at a URL.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;124;03m    BamlValidationError: If the llm read of the image could not be parsed into the expected data model.\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     14\u001b[0m img \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mfrom_url(url)\n\u001b[1;32m---> 15\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mExtractAppointmentFromImage\u001b[49m(img)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'BamlSyncClient' object has no attribute 'ExtractAppointmentFromImage'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'baml_client.types.Appointment'>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Appointment(day_of_week='Thursday', month='January', date=23, year=2025, hour=8, minute=15, ampm='am')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = \"https://baml-testing-idp-image-to-json.s3.us-east-1.amazonaws.com/appointment.jpg\"\n",
+    "url = \"https://idp-baml-tutorial.s3.us-east-1.amazonaws.com/appointment.jpg\"\n",
     "appointment = extract_appointment_from_url(url)\n",
     "print(type(appointment))\n",
     "appointment"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ae2b490-0c5d-485b-95d1-7d674f6bf7ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
