add notebook with all three images

--- a/IDP with BAML 2 - all three images.ipynb
+++ b/IDP with BAML 2 - all three images.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cac94acd-9c11-4630-a7ef-772652813cfc",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "640eff2c-f021-4d4d-af60-99d15bf1d506",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "208d4062-8c0b-429b-aa78-12222d3a71f7",
    "metadata": {},
    "outputs": [],
@@ -66,28 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9acd3632-3ad5-4f09-9a29-e52b85e00add",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'baml_client.types.Appointment'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Appointment(day_of_week='Thursday', month='Jan', date=23, year=2025, hour=8, minute=15, ampm='am')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = \"https://idp-baml-tutorial.s3.us-east-1.amazonaws.com/appointment.jpg\"\n",
     "appointment = extract_appointment_from_url(url)\n",
@@ -97,67 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "55609259-2c4f-4c8c-a2df-17662256fd78",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>month</th>\n",
-       "      <th>date</th>\n",
-       "      <th>year</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>minute</th>\n",
-       "      <th>ampm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>Jan</td>\n",
-       "      <td>23</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>8</td>\n",
-       "      <td>15</td>\n",
-       "      <td>am</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  day_of_week month  date  year  hour  minute ampm\n",
-       "0    Thursday   Jan    23  2025     8      15   am"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert object to a dictionary\n",
     "appointment_dict = appointment.__dict__\n",
@@ -177,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0196e14f-4664-4c97-85a8-a7495b8dcbb8",
    "metadata": {},
    "outputs": [],
@@ -202,21 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "79fbaa78-9f12-409c-8ebd-4e29778dbb2e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'BamlSyncClient' object has no attribute 'ExtractNutritionLabelFromImage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://idp-baml-tutorial.s3.us-east-1.amazonaws.com/nutrition.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m nutrition \u001b[38;5;241m=\u001b[39m \u001b[43mextract_nutrition_from_url\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(nutrition))\n\u001b[0;32m      4\u001b[0m nutrition\n",
-      "Cell \u001b[1;32mIn[4], line 15\u001b[0m, in \u001b[0;36mextract_nutrition_from_url\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03mExtracts an image of a nutritional value label stored at a URL.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;124;03m    BamlValidationError: If the llm read of the image could not be parsed into the expected data model.\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     14\u001b[0m img \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mfrom_url(url)\n\u001b[1;32m---> 15\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mExtractNutritionLabelFromImage\u001b[49m(img)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'BamlSyncClient' object has no attribute 'ExtractNutritionLabelFromImage'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'baml_client.types.NutritionLabel'>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NutritionLabel(product='Maruchan Instant Lunch', description='Fast and tasty as a hot snack or delicious meal, anytime.', calories=290, fat=12, fat_ui='g', fat_dv=15.0, sodium=1150, sodium_ui='mg', sodium_dv=50.0, carb=39, carb_ui='g', carb_dv=14.0, protein=6, protein_ui='g', protein_dv=None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -227,9 +159,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6de6daa-408e-4dd1-a283-794b689fa2b9",
+   "metadata": {},
+   "source": [
+    "## Drop Off Package Receipt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "241e4290-1826-456c-9f2b-672299ef372a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_package_from_url(url: str):\n",
+    "    \"\"\"\n",
+    "    Extracts an image of a nutritional value label stored at a URL.\n",
+    "\n",
+    "    Args:\n",
+    "        url (str): The URL of a nutritional value label image.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: The receipt data. See the baml_src/idp.baml file for the structure of the nutritional value data.\n",
+    "\n",
+    "    Raises:\n",
+    "        BamlValidationError: If the llm read of the image could not be parsed into the expected data model.\n",
+    "    \"\"\"\n",
+    "    img = Image.from_url(url)\n",
+    "    output = b.ExtractDropOffPackageReceiptFromImage(img)\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f9e603f2-d62e-42c7-b14a-d18828e2642d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'baml_client.types.DropOffPackageReceipt'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DropOffPackageReceipt(line_item=[ReceiptItem(tracking_number='DkXCPbL3RRMA', weight=1.13, weight_ui='lb')], location='The UPS Store #4458', address='10650 CULEBRA RD STE 104', day_of_week='Tue', day=31, month='Dec', year=2024, hour=11, minute=52, ampm='AM', total_packages=1, total_packages_ui='pkg')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"https://idp-baml-tutorial.s3.us-east-1.amazonaws.com/package.jpg\"\n",
+    "package = extract_package_from_url(url)\n",
+    "print(type(package))\n",
+    "package"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72509818-e723-482e-925f-85048909cacf",
+   "id": "5ddf7a40-e7e4-4526-a1c8-eb982b17110b",
    "metadata": {},
    "outputs": [],
    "source": []
