remove pandas import

--- a/IDP with BAML 3 - tool calling.ipynb
+++ b/IDP with BAML 3 - tool calling.ipynb
@@ -27,8 +27,7 @@
    "outputs": [],
    "source": [
     "from baml_py import Image\n",
-    "from baml_client import b\n",
-    "import pandas as pd"
+    "from baml_client import b"
    ]
   },
   {
@@ -80,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "NutritionLabel(product='Maruchan Instant Lunch', description='Instant noodle cup', calories=290, fat=12, fat_ui='g', fat_dv=15.0, sodium=1150, sodium_ui='mg', sodium_dv=50.0, carb=39, carb_ui='g', carb_dv=14.0, protein=6, protein_ui='g', protein_dv=None)"
+       "NutritionLabel(product='Maruchan Instant Lunch', description='Ramen noodle soup in a cup with various ingredients including dehydrated vegetables and soy sauce.', calories=290, fat=12, fat_ui='g', fat_dv=15.0, sodium=1150, sodium_ui='mg', sodium_dv=50.0, carb=39, carb_ui='g', carb_dv=14.0, protein=6, protein_ui='g', protein_dv=None)"
       ]
      },
      "execution_count": 4,
