add unknown file

--- a/IDP with BAML 3 - tool calling.ipynb
+++ b/IDP with BAML 3 - tool calling.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "NutritionLabel(product='Maruchan Instant Lunch', description='Ramen noodle soup in a cup with various ingredients including dehydrated vegetables and soy sauce.', calories=290, fat=12, fat_ui='g', fat_dv=15.0, sodium=1150, sodium_ui='mg', sodium_dv=50.0, carb=39, carb_ui='g', carb_dv=14.0, protein=6, protein_ui='g', protein_dv=None)"
+       "NutritionLabel(product='Maruchan Instant Lunch', description='A fast and tasty hot snack or meal.', calories=290, fat=12, fat_ui='g', fat_dv=15.0, sodium=1150, sodium_ui='mg', sodium_dv=50.0, carb=39, carb_ui='g', carb_dv=14.0, protein=6, protein_ui='g', protein_dv=None)"
       ]
      },
      "execution_count": 4,
@@ -89,6 +89,68 @@
    ],
    "source": [
     "url = \"https://idp-baml-tutorial.s3.us-east-1.amazonaws.com/nutrition.jpg\"\n",
+    "result = extract_info_from_url(url)\n",
+    "print(type(result))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e47c5708-275f-497e-be77-08fab6311546",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'baml_client.types.DropOffPackageReceipt'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DropOffPackageReceipt(line_item=[ReceiptItem(tracking_number='DkXCPbL3RRMA', weight=1.13, weight_ui='lb')], location='The UPS Store #4458', address='10650 CULEBRA RD STE 104', day_of_week='Tue', day=31, month='Dec', year=2024, hour=11, minute=52, ampm='AM', total_packages=1, total_packages_ui='pkg')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"https://idp-baml-tutorial.s3.us-east-1.amazonaws.com/package.jpg\"\n",
+    "result = extract_info_from_url(url)\n",
+    "print(type(result))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "492091cb-acc8-46f3-991f-923690c44480",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'baml_client.types.Appointment'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Appointment(day_of_week='Thursday', month='January', date=23, year=2025, hour=8, minute=15, ampm='am')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"https://idp-baml-tutorial.s3.us-east-1.amazonaws.com/unknown.jpg\"\n",
     "result = extract_info_from_url(url)\n",
     "print(type(result))\n",
     "result"
